# HarryPotter_Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: chunker.py  cli.py  config.py  embedder.py  generator.py  loader.py  pipeline.py  retriever.py  vector_store.py
tests/: test_chunker.py  test_retriever.py
